# My_Applicationplp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/myapplicationplp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: filter_min.cpp  filter_min.h  portable_image.h
app/src/main/cpp/jni/: native_analyzer.cpp
app/src/main/java/com/example/myapplicationplp/: AnalyzerImpl.kt  FusionController.kt  GridRenderer.kt  LinAlg6.kt  NativeAnalyzer.kt  PoseEstimator.kt  PoseEstimatorWorker.kt  So3.kt  SpotlightActivity.kt  UsbCdcRepo.kt
app/src/main/java/com/example/myapplicationplp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/example/myapplicationplp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
